--- a/F-2/css/style.css
+++ b/F-2/css/style.css
@@ -95,7 +95,7 @@ nav > ul > li > a:focus {
 }
 
 .slide li {
-    width: 100%;
+    width: 1570px;
     height: 100%;
     position: absolute;
     top: 0;
@@ -104,5 +104,299 @@ nav > ul > li > a:focus {
 }
 
 .slide li a {
-    
+    display: block;
+    height: 100%;
+    width: 1340px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.slide li.s1 {
+    background: url(../img/s1.jpg) no-repeat center/cover;
+    display: block;
+}
+
+.slide li.s2 {
+    background: url(../img/s2.jpg) no-repeat center/cover;
+}
+
+.slide li.s3 {
+    background: url(../img/s3.jpg) no-repeat center/cover;
+}
+
+.slide li h2 {
+    color: #1b3b86;
+    font-size: 35px;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    background-color: rgba(255, 255, 255, .5);
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.slide li h2 span {
+    color: #212121
+}
+
+.container {
+    width: 1340px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.link {
+    height: 100px;
+    background-color: #369;
+    position:  absolute;
+    top: -100px;
+    left: 0;
+    width: 100%;
+}
+
+.link ul {
+    display: flex;
+    color: #fff;
+    height: 100%;
+}
+
+.link ul li {
+    flex-grow: 1;
+    text-align: center;
+    background-color: #1b3b86;
+}
+
+.link ul li a {
+    display: block;
+    height: 100%;
+    padding-top: 30px;
+}
+
+.link ul li:nth-child(even) {
+    background-color: #212121;
+}
+
+
+.link ul li h2 {
+    font-size: 18px;
+}
+
+.link ul li img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+.banner {
+    height: 200px;
+    background-color: #f4f8fb;
+    padding: 20px;
+}
+
+.banner a {
+    display: flex;
+    height: 100%;
+    gap: 30px;
+    align-items: center;
+}
+
+.banner .imgBox img {
+    width: 300px;
+    height: 160px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.banner .txtBox {
+    flex-grow: 1;
+}
+
+.banner .txtBox h2 {
+    color: #1b3b86;
+    padding-bottom: 10px;
+    font-size: 30px;
+}
+
+.banner .txtBox .date {
+    padding-bottom: 5px;
+    font-weight: bold;
+}
+
+.banner .arrow {
+    flex-grow: 1;
+    text-align: center;
+}
+
+.board {
+    height: 300px;
+    display: flex;
+    gap: 20px;
+    padding: 20px;
+}
+
+.board div {
+    width: 50%;
+}
+
+.board div h2 {
+    background-color: #1b3b86;
+    color: #fff;
+    text-align: center;
+    width: 150px;
+    padding: 10px 0;
+}
+
+.notice {
+    position: relative;
+}
+
+.notice table {
+    padding-top: 20px;
+    position: absolute;
+    top: 72px;
+    bottom: 50px;
+}
+
+.notice table th {
+    text-align: left;
+}
+
+.notice table tr:nth-child(odd) {
+    background-color: rgba(0, 0, 0, .5);
+    color: #fff;
+}
+
+.notice table a {
+    display: block;
+    padding: 10px;
+    width: 420px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.notice table td {
+    text-align: center;
+}
+
+.gall ul {
+    display: flex;
+    gap: 20px;
+}
+
+.gall ul li {
+    text-align: center;
+    font-weight: bold;
+    padding-top: 20px;
+}
+
+.gall ul li a {
+    display: block;
+    height: 100%;
+}
+
+.gall .box {
+    padding-bottom: 10px;;
+}
+
+.gall .box img {
+    width: 200px;
+    height: 140px;
+    object-fit: cover;
+}
+
+footer {
+    height: 120px;
+    background-color: #333;
+    width: 1340px;
+    margin: 0 auto;
+    position: relative;
+    padding-left: 20px;
+    padding-top: 40px;;
+}
+
+footer div {
+    position: absolute;
+    top: 30px;
+    right: 20px;
+}
+
+footer .sns {
+    display: flex;
+    gap: 5px;
+    padding-bottom: 15px;
+}
+
+footer .sns a {
+    width: 30px;
+    height: 30px;
+    display: block;
+    border-radius: 50%;
+    text-align: center;
+    padding-top: 9px;
+}
+
+footer .sns li:nth-child(1) a {
+    background-color: #47b749;
+}
+
+footer .sns li:nth-child(2) a {
+    background-color: #3c5b9a;
+}
+
+footer .sns li:nth-child(3) a {
+    background-color: red;
+}
+
+footer select {
+    padding-top: 10px;
+}
+
+footer .copy {
+    color: #fff;
+}
+
+.popup {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 9999;
+    display: none;
+}
+
+.popcon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    text-align: center;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.popcon h2 {
+    color: #1b3b86;
+}
+
+.popcon img {
+    padding: 20px 0;
+}
+
+.popcon .close {
+    text-align: right;
+}
+
+.popcon button {
+    padding-top: 20px;
+    background-color: #1b3b86;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
 }
