--- a/A-4/css/style.css
+++ b/A-4/css/style.css
@@ -275,5 +275,51 @@ footer .fmenu {
 }
 
 footer .fmenu li {
-    
+    border-right: 1px solid #fff;
+    padding-right: 10px;
+    font-size: 14px;
 }
+
+footer .fmenu li:last-child {
+    border-right: 0;
+}
+
+footer select {
+    position: absolute;
+    top: 40px;
+    right: 20px;
+}
+
+footer .fcopy {
+    padding-top: 10px;
+    font-size: 13px;
+}
+
+.popup {
+    position: absolute;
+    width: 500px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    text-align: center;
+    padding: 20px;
+    border: 2px solid #1a4975;
+    border-radius: 20px;
+    z-index: 9999;
+    display: none;
+}
+
+.popup h2 {
+    color: #1a4975;
+    padding-bottom: 20px;
+}
+
+.popup .text {
+    padding: 20px 0;
+}
+
+.popup .close {
+    text-align: right;
+}
+
