--- a/B-1/css/style.css
+++ b/B-1/css/style.css
@@ -34,5 +34,35 @@ body {
     color: #333;
 }
 
+.wrap {
+    position: relative;
+}
 
+.inner {
+    width: 1200px;
+    margin: 0 auto;
+}
 
+header {
+    position: relative;
+    padding-top: 30px;
+    padding-left: 10px;
+    height: 100%;
+    background-color: #0070ba;
+}
+
+nav {
+    position: absolute;
+    top: 59px;
+    right: 0;
+    z-index: 6;
+}
+
+nav > ul {
+    display: flex;
+}
+
+nav > ul > li > a {
+    display: block;
+    
+}
