--- a/C-1/css/style.css
+++ b/C-1/css/style.css
@@ -34,3 +34,335 @@ body {
     color: #333;
 }
 
+.wrap {
+    width: 1000px;
+    height: 650px;
+    display: flex;
+    position: relative;
+}
+
+header {
+    background-color: #0000d5;
+    width: 200px;
+    padding: 80px 0;
+}
+
+nav {
+    padding-top: 50px;
+    padding: 20px;
+}
+
+nav > ul > li > a {
+    display: block;
+    background-color: #ffb800;
+    padding: 10px 0;
+    text-align: center;
+    color: #fff;
+    border-bottom: 0;
+}
+
+nav > ul > li:hover > a,
+nav > ul > li.on > a,
+nav > ul > li > a:focus {
+    background-color: #212121;
+    color: #fff;
+}
+
+.sub {
+    display: none;
+}
+
+.sub li a {
+    display: block;
+    padding: 10px 0;
+    background-color: #fff;
+    color: #0000d5;
+    text-align: center;
+}
+
+.sub li a:hover,
+.sub li a:focus {
+    background-color: #ccc;
+    color: #fff;
+}
+
+.contents {
+    width: 800px;
+}
+
+.slide {
+    position: relative;
+    height: 350px;
+    background-color: #fcc;
+}
+
+.slide ul li {
+    width: 800px;
+    height: 350px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+.slide ul li a {
+    display: block;
+    height: 100%;
+}
+
+.slide ul li.s1 {
+    background: url(../img/s1.jpg) no-repeat center/cover;
+    display: block;
+}
+
+.slide ul li.s2 {
+    background: url(../img/s2.jpg) no-repeat center/cover;
+}
+
+.slide ul li.s3 {
+    background: url(../img/s3.jpg) no-repeat center/cover;
+}
+
+.slide ul li h2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 213, .5);
+    border-radius: 20px 0 20px 0;
+    padding: 10px 40px;
+    color: #fff;
+    font-size: 30px;
+    width: 600px;
+    text-align: center;
+}
+
+.slide ul li h2 span {
+    color: #ffb800;
+    font-weight: bold;
+}
+
+.con {
+    height: 200px;
+    display: flex;
+}
+
+.con article {
+    width: 33.3333%;
+    padding: 5px;
+}
+
+.con1 {
+    position: relative;
+}
+
+.con1 .tabmenu {
+    display: flex;
+}
+
+.con1 .tabmenu > li {
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 10px 10px 0 0;
+}
+
+.con1 .tabmenu > li > h2 {
+    font-size: 18px;
+}
+
+.con1 .tabmenu > li.on {
+    background-color: #0000d5;
+}
+
+.con1 .tabcon {
+    position: absolute;
+    left: 5px;
+    top: 36px;
+}
+
+.con1 .notice table {
+    border-top: 3px solid #0000d5;
+}
+
+.con1 .notice table tr {
+    border-bottom: 1px solid #f7f7f4;
+}
+
+.con1 .notice table th {
+    text-align: left;
+}
+
+.con1 .notice table th a {
+    padding: 7px;
+    display: block;
+    width: 180px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: #333;
+}
+
+.con1 .notice table td {
+    color: #333;
+}
+
+.con1 .gall {
+    display: none;
+}
+
+.con1 .gall ul {
+    border-top: 3px solid #0000d5;
+    padding-top: 40px;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
+
+.con1 .gall ul li {
+    width: 80px;
+}
+
+.con1 .gall ul li a {
+    display: block;
+    height: 50px;
+    overflow: hidden;
+}
+
+.con2 {
+    padding: 10px;
+}
+
+.con2 > h2 {
+    color: #0000d5;
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.con2 a{
+    display: block;
+    height: 130px;
+    background: url(../img/banner.jpg) center/cover;
+    border-radius: 30px;
+    overflow: hidden;
+    color: #fff;
+}
+
+.con2 div {
+    height: 100%;
+    padding: 20px;
+    background-color: rgba(0, 112, 190, .5);
+    text-align: center;
+}
+
+.con2 div h2 {
+    padding-bottom: 10px;
+    color: #ff0;
+}
+
+.con2 p {
+    text-align: center;
+    color: #fff;
+    display: inline-block;
+    letter-spacing: -2px;
+}
+
+.con3 {
+    padding: 10px;
+}
+
+.con3 > h2 {
+    color: #0000d5;
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.con3 ul {
+    padding-top: 25px;
+    text-align: center;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
+
+.con3 ul li {
+    text-align: center;
+}
+
+.con3 ul li a {
+    display: block;
+    height: 100%;
+}
+
+.con3 ul li span {
+    display: block;
+    width: 70px;
+    height: 70px;
+    border-radius: 20px;
+    background-color: #0000d5;
+    text-align: center;
+    padding-top: 15px;
+}
+
+.con3 ul li p {
+    padding-top: 5px;
+    font-weight: bold;
+}
+
+footer {
+    position: relative;
+    height: 100px;
+    background-color: #333;
+    color: #fff;
+    padding-top: 30px;
+    padding-left: 20px;
+    display: flex;
+}
+
+footer .flogo {
+    padding-right: 50px;
+}
+
+footer .fmenu {
+    display: flex;
+    gap: 10px;
+}
+
+footer .fmenu li {
+    border-right: 1px solid #fff;
+    padding-right: 10px;
+    font-size: 14px;
+}
+
+footer .fmenu li:last-child {
+    border-right: 0;
+}
+
+footer .fcopy {
+    color: #fff;
+    font-size: 14px;
+    padding-top: 5px;
+}
+
+.popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    border-radius: 20px;
+    text-align: center;
+    padding: 20px;
+    display: none;
+}
+
+.popup h2 {
+    color: #0000d5;
+    padding-bottom: 20px;
+}
+
+.popup .close {
+    text-align: right;
+    padding-top: 20px;
+}
+
