--- a/E-4/css/style.css
+++ b/E-4/css/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-* {
+body, header, footer, section, article, ul, li, p, h1, h2, h3 {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
