--- a/A-1/css/style.css
+++ b/A-1/css/style.css
@@ -159,25 +159,25 @@ nav > ul > li.on > a {
     background-color: #fff;
 }
 
-.con1 {
+.contents {
     position: relative;
 }
 
-.con1 .tabmenu {
+.contents .tabmenu {
     display: flex;
 }
 
-.con1 .tabmenu > li {
+.contents .tabmenu > li {
     width: 150px;
     background-color: #fcf0ea;
 }
 
-.con1 .tabmenu > li.on {
+.contents .tabmenu > li.on {
     background-color: #ceb398;
     color: #fff;
 }
 
-.con1 .tabmenu > li > h2 > a {
+.contents .tabmenu > li > h2 > a {
     display: block;
     text-align: center;
     padding: 10px 0;
@@ -185,7 +185,7 @@ nav > ul > li.on > a {
     font-size: 20px;
 }
 
-.con1 .tabcon {
+.contents .tabcon {
     position: absolute;
     left: 0;
     width: 100%;
@@ -229,11 +229,11 @@ nav > ul > li.on > a {
     gap: 10px;
 }
 
-.con2 {
+.banner {
     padding: 10px;
 }
 
-.con2 a {
+.banner a {
     display: block;
     height: 100%;
     background: url(../img/s1.jpg) center/cover;
@@ -242,17 +242,17 @@ nav > ul > li.on > a {
     overflow: hidden;
 }
 
-.con2 div {
+.banner div {
     background-color: rgba(206, 179, 152, .8);
     height: 100%;
     padding-top: 30px;
 }
 
-.con2 h2 {
+.banner h2 {
     padding-bottom: 10px;
 }
 
-.con2 p {
+.banner p {
     background-color: #333;
     color: #fff;
     display: inline-block;
@@ -260,38 +260,38 @@ nav > ul > li.on > a {
     padding-top: 2px;
 }
 
-.con3 {
+.go {
     padding: 10px;
 }
 
-.con3 h2 {
+.go h2 {
     color: #ceb398;
     padding-bottom: 20px;
 }
 
-.con3 ul {
+.go ul {
     display: flex;
     text-align: center;
     gap: 20px;
     justify-content: center;
 }
 
-.con3 ul li a {
+.go ul li a {
     display: block;
     height: 100%;
 }
 
-.con3 ul li p {
-    width: 80px;
-    height: 80px;
+.go ul li p {
+    width: 120px;
+    height: 110px;
     background-color: #ceb398;
     padding-top: 20px;
     border-radius: 20px;
-}
-
-.con3 ul li span {
     padding-top: 10px;
     display: block;
+    justify-content: space-evenly;
+    text-align: center;
+    line-height: 90px;
     font-weight: bold;
 }
 
@@ -316,11 +316,10 @@ footer {
 
 .fsns li a {
     display: block;
-    width: 30px;
     background-color: #fff;
-    border-radius: 50%;
     text-align: center;
-    padding-top: 10px;
+    line-height: 50px;
+    font-weight: bold;
 }
 
 .fsns li:nth-child(1) a {
