--- a/A-3/css/style.css
+++ b/A-3/css/style.css
@@ -156,22 +156,22 @@ nav > ul > li > a:focus {
     width: 400px;
 }
 
-.con1 {
+.contents {
     position: relative;
 }
 
-.con1 .tabmenu > li {
+.contents .tabmenu > li {
     width: 150px;
     display: inline-block;
     background-color: #d6edfd;
 }
 
-.con1 .tabmenu > li.on {
+.contents .tabmenu > li.on {
     background-color: #0066ad;
     color: #fff;
 }
 
-.con1 .tabmenu > li > h2 > a {
+.contents .tabmenu > li > h2 > a {
     display: block;
     text-align: center;
     padding: 10px 0;
@@ -179,7 +179,7 @@ nav > ul > li > a:focus {
     font-size: 20px;
 }
 
-.con1 .tabcon {
+.contents .tabcon {
     background-color: #0066ad;
     color: #fff;
     padding: 5px;
@@ -224,10 +224,11 @@ nav > ul > li > a:focus {
     width: 120px;
 }
 
-.con2 {
+.banner {
     padding: 10px;
+    padding-right: 60px;
 }
-.con2 a {
+.banner a {
     display: block;
     height: 100%;
     background: url(../img/banner.jpg) center/cover;
@@ -237,20 +238,20 @@ nav > ul > li > a:focus {
     color: #fff;
 }
 
-.con2 div {
+.banner div {
     height: 100%;
     padding-top: 30px;
 }
 
-.con2 h2 {
+.banner h2 {
     padding-bottom: 15px;
 }
 
-.con2 h2 span {
+.banner h2 span {
     font-weight: 300;
 }
 
-.con2 p {
+.banner p {
     background-color: #333;
     text-align: center;
     color: #fff;
@@ -259,40 +260,39 @@ nav > ul > li > a:focus {
     padding: 10px;
 }
 
-.con3 {
+.go {
     padding: 10px;
 }
 
-.con3 h2 {
+.go h2 {
     color: #0066ad;
     padding-bottom: 20px;
 }
 
-.con3 ul {
+.go ul {
     text-align: center;
     display: flex;
     gap: 20px;
     justify-content: center;
 }
 
-.con3 ul li a {
+.go ul li a {
     display: block;
     height: 100%;
 }
 
-.con3 ul li p {
-    width: 80px;
-    height: 80px;
+.go ul li p {
+    width: 120px;
+    height: 90px;
     background-color: #0066ad;
     text-align: center;
+    line-height: 60px;
     padding: 20px;
     border-radius: 20px;
-}
-
-.con3 ul li span {
     padding-top: 10px;
     display: block;
     font-weight: bold;
+    color: #fff;
 }
 
 footer {
