--- a/B-2/css/style.css
+++ b/B-2/css/style.css
@@ -253,18 +253,17 @@ nav > ul > li > a:focus {
 
 .go li p {
     display: block;
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 90px;
     background-color: #00c73c;
     padding-top: 20px;
     border-radius: 20px;
     padding-bottom: 10px;
-}
-
-.go li span {
     display: block;
     font-weight: bold;
-    padding-top: 5px;
+    text-align: center;
+    line-height: 50px;
+    color: #fff;
 }
 
 .go li a {
@@ -281,7 +280,6 @@ footer .inner {
     position: relative;
     width: 1200px;
     margin: 0 auto;
-    height: 100%;
     padding-top: 30px;
     background-color: #333;
 }
@@ -290,7 +288,7 @@ footer select {
     display: flex;
     gap: 10px;
     position: absolute;
-    top: 60px;
+    top: 70px;
     right: 25px;
 }
 
@@ -304,20 +302,21 @@ footer .fsns {
 
 footer .fsns li a {
     display: block;
-    width: 30px;
+    width: 100px;
     height: 30px;
     background-color: #fff;
-    border-radius: 50%;
     text-align: center;
-    padding-top: 9px;
+    padding-top: 10px;
+    color: #fff;
+    font-weight: bold;
 }
 
 footer .fsns li:nth-child(1) a {
-    background-color: #47b749;
+    background-color: #3c5b9a;
 }
 
 footer .fsns li:nth-child(2) a {
-    background-color: #3c5b9a;
+    background-color: #47b749;
 }
 
 footer .fsns li:nth-child(3) a {
