--- a/D-1/css/style.css
+++ b/D-1/css/style.css
@@ -307,7 +307,7 @@ nav > ul > li.on > a {
     padding-bottom: 0;
 }
 
-.go span {
+.go p {
     display: block;
     padding-top: 10px;
 }
@@ -333,10 +333,9 @@ footer .sns {
 
 footer .sns li a {
     display: block;
-    width: 30px;
+    width: 100px;
     height: 30px;
     background-color: #fff;
-    border-radius: 50%;
     text-align: center;
     padding-top: 10px;
 }
@@ -353,6 +352,9 @@ footer .sns li:nth-child(3) a {
     background-color: red;
 }
 
+footer .copy {
+    font-size: 14px;
+}
 .popcon {
     position: absolute;
     width: 500px;
