--- a/B-1/css/style.css
+++ b/B-1/css/style.css
@@ -362,7 +362,7 @@ footer .copy {
 
 .popup {
     width: 500px;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -372,6 +372,7 @@ footer .copy {
     padding: 20px;
     border: 2px solid #0066ad;
     border-radius: 20px;
+    border: 3px solid #333;
     display: none;
 }
 
