--- a/B-2/css/style.css
+++ b/B-2/css/style.css
@@ -332,7 +332,7 @@ footer .fcopy {
 
 .popup {
     width: 500px;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     background-color: #fff;
@@ -342,6 +342,7 @@ footer .fcopy {
     border: 2px solid #00c73c;
     border-radius: 20px;
     z-index: 9999;
+    border: 3px solid #333;
     display: none;
 }
 
