--- a/C-4/css/style.css
+++ b/C-4/css/style.css
@@ -278,12 +278,13 @@ footer .copy {
     z-index: 9999; 
     background: rgba(0,0,0,.8); 
     top: 0; 
-    left: 0; 
+    left: 0;
+    border: 3px solid #333;
     display: none;
 }
 
 .popcon {
-    position: absolute; 
+    position: fixed;
     top: 50%; 
     left: 50%; 
     transform: translate(-50%, -50%); 
