--- a/D-1/css/style.css
+++ b/D-1/css/style.css
@@ -338,6 +338,8 @@ footer .sns li a {
     background-color: #fff;
     text-align: center;
     padding-top: 10px;
+    color: #fff;
+    font-weight: bold;
 }
 
 footer .sns li:first-child a {
@@ -356,7 +358,7 @@ footer .copy {
     font-size: 14px;
 }
 .popcon {
-    position: absolute;
+    position: fixed;
     width: 500px;
     background-color: #fff;
     top: 50%;
@@ -366,6 +368,7 @@ footer .copy {
     padding: 20px;
     border-radius: 20px;
     z-index: 9999;
+    border: 3px solid #333;
     display: none;
 }
 
