--- a/E-3/css/style.css
+++ b/E-3/css/style.css
@@ -349,7 +349,8 @@ footer ul li:nth-child(3) a {
     transform: translate(-50%, -50%); 
     padding: 20px; 
     border-radius: 20px; 
-    display: none; 
+    display: none;
+    border: 3px solid #333;
     z-index: 9999;
 }
 
