--- a/A-1/css/style.css
+++ b/A-1/css/style.css
@@ -335,7 +335,7 @@ footer {
 }
 
 .popup {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -344,6 +344,7 @@ footer {
     width: 400px;
     background-color: #fff;
     z-index: 9999;
+    border: 3px solid #333;
     display: none;
 }
 
