--- a/B-3/css/style.css
+++ b/B-3/css/style.css
@@ -284,11 +284,11 @@ footer .sns li a {
 }
 
 footer .sns li:nth-child(1) a {
-    background-color: #47b749;
+    background-color: #3c5b9a;
 }
 
 footer .sns li:nth-child(2) a {
-    background-color: #3c5b9a;
+    background-color: #47b749;
 }
 
 footer .sns li:nth-child(3) a {
@@ -296,7 +296,7 @@ footer .sns li:nth-child(3) a {
 }
 
 .popup {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     width: 500px;
@@ -307,6 +307,7 @@ footer .sns li:nth-child(3) a {
     padding: 20px;
     border: 2px solid #caac7d;
     border-radius: 20px;
+    border: 3px solid #333;
     display: none;
 }
 
