--- a/B-4/css/style.css
+++ b/B-4/css/style.css
@@ -207,7 +207,8 @@ nav > ul > li.on > a {
 }
 
 .gall {
-    padding: 10px;
+    height: 230px;
+    padding: 15px;
     background-color: #0f296f;
 }
 
@@ -325,11 +326,12 @@ footer .fcopy {
     z-index: 9999;
     width: 100%;
     height: 100%;
+    border: 3px solid #333;
     display: none;
 }
 
 .popcon {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     background-color: #fff;
