--- a/C-1/css/style.css
+++ b/C-1/css/style.css
@@ -343,14 +343,16 @@ footer .fcopy {
 }
 
 .popup {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
+    width: 500px;
     transform: translate(-50%, -50%);
     background-color: #fff;
     border-radius: 20px;
     text-align: center;
     padding: 20px;
+    border: 3px solid #333;
     display: none;
 }
 
