--- a/C-2/css/style.css
+++ b/C-2/css/style.css
@@ -297,18 +297,19 @@ footer .copy {
 }
 
 .popup {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .5);
     z-index: 9999;
+    border: 3px solid #333;
     display: none;
 }
 
 .popcon {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
