--- a/D-3/css/style.css
+++ b/D-3/css/style.css
@@ -351,7 +351,6 @@ footer .copy {
 .popcon {
     position: fixed;
     width: 500px;
-    height: 700px;
     background-color: #ae6105;
     border-radius: 50px;
     z-index: 50;
@@ -360,11 +359,13 @@ footer .copy {
     transform: translate(-50%, -50%);
     text-align: center;
     padding: 50px;
+    border: 3px solid #333;
     display: none;
 }
 
 .popcon h2 {
     color: #fff;
+    text-align: center;
     padding-bottom: 50px;
 }
 
