--- a/D-4/css/style.css
+++ b/D-4/css/style.css
@@ -274,7 +274,7 @@ footer .copy {
 }
 
 .popcon {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -284,7 +284,7 @@ footer .copy {
     text-align: center;
     padding: 50px;
     width: 500px;
-    height: 700px;
+    border: 3px solid #333;
     display: none;
     
 }
