--- a/E-1/css/style.css
+++ b/E-1/css/style.css
@@ -341,13 +341,14 @@ footer .copy {
 }
 
 .popup {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .5);
     z-index: 9999;
+    border: 3px solid #333;
     display: none;
 }
 
