--- a/E-2/css/style.css
+++ b/E-2/css/style.css
@@ -266,12 +266,14 @@ footer .copy {
 }
 
 .popup {
-    position: absolute;
+    position: fixed;
+    width: 500px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, .5);
     z-index: 9999;
+    border: 3px solid #333;
     display: none;
 }
 
