--- a/E-4/css/style.css
+++ b/E-4/css/style.css
@@ -315,17 +315,19 @@ select {
 }
 
 .popup {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .5);
     z-index: 9999;
+    border: 3px solid #333;
     display: none;
 }
 
 .popcon {
+    width: 500px;
     position: absolute;
     top: 50%;
     left: 50%;
